Revised branding alignment (bug fix)

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -265,7 +265,7 @@ body.queenslaw-sub-site #header {
 body.queenslaw-sub-site #branding {
   .block-queensuniversity .field--name-body {
     border-right-color: $white;
-    padding-top: 14px;
+    margin-top: 14px;
   }
   .block-logo svg {
     height: 44px;
